--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ djangorestframework-simplejwt = "*"
 djoser = "*"
 psycopg2 = "*"
 psycopg2-binary = "*"
+dj-database-url = "*"
 
 [dev-packages]
 
