--- a/requirements.txt
+++ b/requirements.txt
@@ -13,17 +13,20 @@ django-templated-mail==1.1.1
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
 djoser==2.1.0
+environs==9.3.0
 exit==2020.12.3
 gunicorn==20.0.4
 idna==2.10
 itypes==1.2.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+marshmallow==3.10.0
 oauthlib==3.1.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==2.0.1
+python-dotenv==0.15.0
 python3-openid==3.2.0
 pytz==2020.5
 requests==2.25.1
